# scout-it

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
data_scout/: __init__.py  cleaner.py  cli.py  engines.py  extraction.py  github_extract.py  social.py
docs/: INSTALL.md  PACKAGE_CONVERSION_SUMMARY.md  PACKAGE_READY_FOR_PUBLICATION.md  README.md
docs/search/: OPTIONS.md  README.md  fetch.md  imagesearch.md  newssearch.md  videosearch.md  websearch.md
gakr_ddgs/: __init__.py  cleaner.py  cli.py  extraction.py
scout-it-skill/: SKILL.md
scout-it-website/: .gitignore  README.md  index.html  package-lock.json  package.json
scout-it-website/public/: robots.txt  sitemap.xml
scout-it-website/src/: App.tsx  main.tsx
scout-it-website/src/components/: Breadcrumbs.tsx  CopyCommand.tsx  CopyPageMenu.tsx  DocsLayout.tsx  DocsSidebar.tsx  DocsToc.tsx  Footer.tsx  Layout.tsx  LiveClock.tsx  Nav.tsx  Preloader.tsx  SEO.tsx  ScrollProgress.tsx  Terminal.tsx
scout-it-website/src/data/: configuration.ts  docsNav.ts  engines.ts  githubCommands.ts  searchFlags.ts  site.ts  socialCommands.ts
scout-it-website/src/lib/: domToMarkdown.ts  useCardGlow.ts  useMagnetic.ts  useScrollReveal.ts
scout-it-website/src/pages/: Home.tsx  NotFound.tsx
scout-it-website/src/pages/docs/: Api.tsx  CliReference.tsx  Configuration.tsx  DocsHome.tsx  FetchUrl.tsx  GitHub.tsx  ImageVideo.tsx  Installation.tsx  MultiEngine.tsx  Output.tsx  Quickstart.tsx  Social.tsx  WebSearch.tsx
scout-it-website/src/styles/: global.css
scout_it/: __init__.py  _utils.py  alternate_source.py  browser_profile.py  canary_probe.py  cli.py  config.py  dns_resilience.py  engines.py  extraction.py  github_extract.py  google_news_source.py  header_profiles.py  heuristic_extract.py  output.py  politeness_governor.py  proxy_pool.py  response_cache.py  retry_classifier.py  selector_cache.py  social.py  strategy_bandit.py  strategy_cache.py  tls_fingerprint.py  toi_rss_source.py  wikimedia_source.py
tests/: __init__.py  conftest.py  test_advanced_evasion.py  test_all_parameters.py  test_cleaner.py  test_cli.py  test_extraction_memory.py  test_hardening.py  test_ladder_and_politeness.py  test_new_sources.py  test_output.py  test_resilience.py  test_strategy.py  verify_all_parameters.py
